Updated ignore file for git users.
git-svn-id: https://svn.aros.org/svn/aros/trunk@30416 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/.gitignore
+++ b/contrib/.gitignore
@@ -621,6 +621,9 @@
 # /Networking/Utils/daytime/
 /Networking/Utils/daytime/mmakefile
 
+# /Networking/libs/openssl/
+/Networking/libs/openssl/mmakefile
+
 # /SDL/
 /SDL/mmakefile
 
@@ -1208,6 +1211,9 @@
 
 # /development/pthread/
 /development/pthread/mmakefile
+
+# /disk/cdrom/mkisofs/
+/disk/cdrom/mkisofs/mmakefile
 
 # /dopus/Config/
 /dopus/Config/*.err
