USB stack supports SetTimeout method now, which is supported on *every* USB device in the system, including USB drivers. It is used to adjust timeout of either default pipe or of any other pipe specified in this call.
git-svn-id: https://svn.aros.org/svn/aros/trunk@30585 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/USB/drivers/OHCI/ohci.conf
+++ b/contrib/necessary/USB/drivers/OHCI/ohci.conf
@@ -27,6 +27,7 @@ GetEndpoint
 Configure
 CreatePipe
 DeletePipe
+SetTimeout
 .interface Hidd_USBHub
 GetHubDescriptor
 OnOff
@@ -44,4 +45,5 @@ ControlTransfer
 AddInterrupt
 RemInterrupt
 BulkTransfer
+SetTimeout
 ##end methodlist
