--- a/contrib/necessary/USB/drivers/UHCI/uhci.conf
+++ b/contrib/necessary/USB/drivers/UHCI/uhci.conf
@@ -28,6 +28,7 @@ Configure
 GetEndpoint
 CreatePipe
 DeletePipe
+SetTimeout
 .interface Hidd_USBHub
 GetHubDescriptor
 OnOff
@@ -45,4 +46,5 @@ ControlTransfer
 AddInterrupt
 RemInterrupt
 BulkTransfer
+SetTimeout
 ##end methodlist
