Updated ignore file for git users.
git-svn-id: https://svn.aros.org/svn/aros/trunk@30592 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/.gitignore
+++ b/contrib/.gitignore
@@ -646,6 +646,9 @@
 # /SDL/SDL_image/
 /SDL/SDL_image/mmakefile
 
+# /SDL/SDL_main/
+/SDL/SDL_main/mmakefile
+
 # /SDL/SDL_mixer/
 /SDL/SDL_mixer/mmakefile
 
