Make sure generated files in Include get deleted during 'make clean'. This should fix the issue with ahi.h not being available.
git-svn-id: https://svn.aros.org/svn/aros/trunk@30923 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/AHI/Include/Makefile.in
+++ b/contrib/necessary/AHI/Include/Makefile.in
@@ -76,7 +76,7 @@ endif
 all:		$(TARGETS)
 
 clean:
-	$(RM) -r $(TARGETS) gcc-include.stamp gcc
+	$(RM) -r $(TARGETS) gcc-include-*.stamp gcc
 
 distclean:	clean
 	$(RM) Makefile
