Minor fixes and code clean up.
git-svn-id: https://svn.aros.org/svn/aros/trunk@31728 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/gfx/libs/mesa/src/mesa/arosmesa.conf
+++ b/contrib/gfx/libs/mesa/src/mesa/arosmesa.conf
@@ -21,7 +21,8 @@ AROSMesaContext AROSMesaCreateContext(struct TagItem *tagList)
 void AROSMesaDestroyContext(AROSMesaContext amesa) (A0)
 void AROSMesaMakeCurrent(AROSMesaContext amesa) (A0)
 void AROSMesaSwapBuffers(AROSMesaContext amesa) (A0)
-.skip 25
+AROSMesaContext AROSMesaGetCurrentContext() ()
+.skip 24
 void glClearIndex(GLfloat c) (D0)
 void glClearColor(GLclampf red, GLclampf green, GLclampf blue, GLclampf alpha) (D0, D1, D2, D3)
 void glClear(GLbitfield mask) (D0)
