Updated to release 26.4
git-svn-id: https://svn.aros.org/svn/aros/trunk@31754 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/mui/classes/thebar/demo/Makefile
+++ b/contrib/mui/classes/thebar/demo/Makefile
@@ -16,7 +16,7 @@
 #
 # TheBar class Support Site:  http://www.sf.net/projects/thebar
 #
-# $Id: Makefile 300 2009-05-24 12:25:11Z damato $
+# $Id: Makefile 323 2009-08-14 06:44:57Z thboeckel $
 #
 #***************************************************************************/
 
@@ -175,7 +175,7 @@ DEMO10TARGET = $(BINDIR)/demo10
 WARN     = -W -Wall -Wwrite-strings -Wpointer-arith -Wsign-compare
 OPTFLAGS = -O3 -fomit-frame-pointer -funroll-loops
 DEBUG    = -DDEBUG -O0
-DEBUGSYM = -gstabs
+DEBUGSYM = -g -gstabs
 CFLAGS   = -I. -I../include $(CPU) $(WARN) $(OPTFLAGS) \
            $(DEBUG) $(DEBUGSYM) -c
 LDFLAGS  = $(CPU) $(DEBUGSYM)
