Added fallback font cache directory in T: for better browsing experience when running from non-writable media.
git-svn-id: https://svn.aros.org/svn/aros/trunk@31935 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/Networking/Apps/OWB/fonts/config/fonts.conf
+++ b/contrib/Networking/Apps/OWB/fonts/config/fonts.conf
@@ -69,6 +69,7 @@
 <!-- Font cache directory list -->
 
 	<cachedir>PROGDIR:fonts/cache</cachedir>
+	<cachedir>T:fonts/cache</cachedir>
 
 	<config>
 <!--
