Ignore files with Unicode names which are unreadable in current 8-bit codeset
git-svn-id: https://svn.aros.org/svn/aros/trunk@32158 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/necessary/AHI/AHI/Makefile.in
+++ b/contrib/necessary/AHI/AHI/Makefile.in
@@ -51,7 +51,7 @@ OBJECTS_MUI	= gui_mui.o
 
 EXECUTABLES	= AHI_MUI # AHI_BGUI AHI_CA
 
-LANGUAGES	= $(notdir $(basename $(wildcard ${srcdir}/translations/*.ct)))
+LANGUAGES	= $(basename $(shell cd ${srcdir}/translations; for file in *.ct; do if [ -f $$file ]; then echo -n "$$file "; fi; done))
 CATALOGS	= $(addsuffix .catalog, $(LANGUAGES))
 
 
