--- a/contrib/necessary/AHI/Device/Makefile.in
+++ b/contrib/necessary/AHI/Device/Makefile.in
@@ -58,7 +58,7 @@ ENABLE_WARPUP	= @ENABLE_WARPUP@
 # Files
 ########################################
 
-LANGUAGES	= $(notdir $(basename $(wildcard $(srcdir)/translations/*.ct)))
+LANGUAGES	= $(basename $(shell cd ${srcdir}/translations; for file in *.ct; do if [ -f $$file ]; then echo -n "$$file "; fi; done))
 CATALOGS	= $(addsuffix .catalog, $(LANGUAGES))
 
 OBJECTS		= header.o gateway.o gatestubs.o \
