Updated ignore file for git users.
git-svn-id: https://svn.aros.org/svn/aros/trunk@32513 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/.gitignore
+++ b/contrib/.gitignore
@@ -66,279 +66,6 @@
 # /DiskSpeed/catalogs/
 /DiskSpeed/catalogs/mmakefile
 
-# /Feelin/
-/Feelin/mmakefile
-
-# /Feelin/AROS/
-/Feelin/AROS/mmakefile
-
-# /Feelin/Demos/
-/Feelin/Demos/mmakefile
-
-# /Feelin/ENVARC/Feelin/
-/Feelin/ENVARC/Feelin/mmakefile
-
-# /Feelin/Include/lib/
-/Feelin/Include/lib/mmakefile
-
-# /Feelin/Sources/Adjust/
-/Feelin/Sources/Adjust/mmakefile
-
-# /Feelin/Sources/AdjustBrush/
-/Feelin/Sources/AdjustBrush/mmakefile
-
-# /Feelin/Sources/AdjustColor/
-/Feelin/Sources/AdjustColor/mmakefile
-
-# /Feelin/Sources/AdjustFrame/
-/Feelin/Sources/AdjustFrame/mmakefile
-
-# /Feelin/Sources/AdjustGradient/
-/Feelin/Sources/AdjustGradient/mmakefile
-
-# /Feelin/Sources/AdjustImage/
-/Feelin/Sources/AdjustImage/mmakefile
-
-# /Feelin/Sources/AdjustPen/
-/Feelin/Sources/AdjustPen/mmakefile
-
-# /Feelin/Sources/AdjustPicture/
-/Feelin/Sources/AdjustPicture/mmakefile
-
-# /Feelin/Sources/AdjustPreParse/
-/Feelin/Sources/AdjustPreParse/mmakefile
-
-# /Feelin/Sources/AdjustRGB/
-/Feelin/Sources/AdjustRGB/mmakefile
-
-# /Feelin/Sources/AdjustRaster/
-/Feelin/Sources/AdjustRaster/mmakefile
-
-# /Feelin/Sources/AdjustScheme/
-/Feelin/Sources/AdjustScheme/mmakefile
-
-# /Feelin/Sources/AdjustSchemeEntry/
-/Feelin/Sources/AdjustSchemeEntry/mmakefile
-
-# /Feelin/Sources/AdjustSpacing/
-/Feelin/Sources/AdjustSpacing/mmakefile
-
-# /Feelin/Sources/AppServer/
-/Feelin/Sources/AppServer/mmakefile
-
-# /Feelin/Sources/Application/
-/Feelin/Sources/Application/mmakefile
-
-# /Feelin/Sources/Area/
-/Feelin/Sources/Area/mmakefile
-
-# /Feelin/Sources/Balance/
-/Feelin/Sources/Balance/mmakefile
-
-# /Feelin/Sources/Bar/
-/Feelin/Sources/Bar/mmakefile
-
-# /Feelin/Sources/BitMap/
-/Feelin/Sources/BitMap/mmakefile
-
-# /Feelin/Sources/CorePNG/
-/Feelin/Sources/CorePNG/mmakefile
-
-# /Feelin/Sources/Crawler/
-/Feelin/Sources/Crawler/mmakefile
-
-# /Feelin/Sources/Cycle/
-/Feelin/Sources/Cycle/mmakefile
-
-# /Feelin/Sources/DOSList/
-/Feelin/Sources/DOSList/mmakefile
-
-# /Feelin/Sources/DOSNotify/
-/Feelin/Sources/DOSNotify/mmakefile
-
-# /Feelin/Sources/Dataspace/
-/Feelin/Sources/Dataspace/mmakefile
-
-# /Feelin/Sources/Decorator/
-/Feelin/Sources/Decorator/mmakefile
-
-# /Feelin/Sources/Decorator-Flatty/
-/Feelin/Sources/Decorator-Flatty/mmakefile
-
-# /Feelin/Sources/Decorator-Shade/
-/Feelin/Sources/Decorator-Shade/mmakefile
-
-# /Feelin/Sources/Dialog/
-/Feelin/Sources/Dialog/mmakefile
-
-# /Feelin/Sources/Display/
-/Feelin/Sources/Display/mmakefile
-
-# /Feelin/Sources/DisplayServer/
-/Feelin/Sources/DisplayServer/mmakefile
-
-# /Feelin/Sources/Document/
-/Feelin/Sources/Document/mmakefile
-
-# /Feelin/Sources/Family/
-/Feelin/Sources/Family/mmakefile
-
-# /Feelin/Sources/FileChooser/
-/Feelin/Sources/FileChooser/mmakefile
-
-# /Feelin/Sources/FontChooser/
-/Feelin/Sources/FontChooser/mmakefile
-
-# /Feelin/Sources/FontDialog/
-/Feelin/Sources/FontDialog/mmakefile
-
-# /Feelin/Sources/Frame/
-/Feelin/Sources/Frame/mmakefile
-
-# /Feelin/Sources/Gauge/
-/Feelin/Sources/Gauge/mmakefile
-
-# /Feelin/Sources/Group/
-/Feelin/Sources/Group/mmakefile
-
-# /Feelin/Sources/HTMLDocument/
-/Feelin/Sources/HTMLDocument/mmakefile
-
-# /Feelin/Sources/Histogram/
-/Feelin/Sources/Histogram/mmakefile
-
-# /Feelin/Sources/Image/
-/Feelin/Sources/Image/mmakefile
-
-# /Feelin/Sources/ImageDisplay/
-/Feelin/Sources/ImageDisplay/mmakefile
-
-# /Feelin/Sources/List/
-/Feelin/Sources/List/mmakefile
-
-# /Feelin/Sources/Listview/
-/Feelin/Sources/Listview/mmakefile
-
-# /Feelin/Sources/Menu/
-/Feelin/Sources/Menu/mmakefile
-
-# /Feelin/Sources/MenuItem/
-/Feelin/Sources/MenuItem/mmakefile
-
-# /Feelin/Sources/ModulesList/
-/Feelin/Sources/ModulesList/mmakefile
-
-# /Feelin/Sources/Numeric/
-/Feelin/Sources/Numeric/mmakefile
-
-# /Feelin/Sources/Palette/
-/Feelin/Sources/Palette/mmakefile
-
-# /Feelin/Sources/Picture/
-/Feelin/Sources/Picture/mmakefile
-
-# /Feelin/Sources/PopBrush/
-/Feelin/Sources/PopBrush/mmakefile
-
-# /Feelin/Sources/PopColor/
-/Feelin/Sources/PopColor/mmakefile
-
-# /Feelin/Sources/PopFile/
-/Feelin/Sources/PopFile/mmakefile
-
-# /Feelin/Sources/PopFont/
-/Feelin/Sources/PopFont/mmakefile
-
-# /Feelin/Sources/PopFrame/
-/Feelin/Sources/PopFrame/mmakefile
-
-# /Feelin/Sources/PopHelp/
-/Feelin/Sources/PopHelp/mmakefile
-
-# /Feelin/Sources/PopImage/
-/Feelin/Sources/PopImage/mmakefile
-
-# /Feelin/Sources/PopPicture/
-/Feelin/Sources/PopPicture/mmakefile
-
-# /Feelin/Sources/PopPreParse/
-/Feelin/Sources/PopPreParse/mmakefile
-
-# /Feelin/Sources/PopScheme/
-/Feelin/Sources/PopScheme/mmakefile
-
-# /Feelin/Sources/Preference/
-/Feelin/Sources/Preference/mmakefile
-
-# /Feelin/Sources/PreferenceEditor/
-/Feelin/Sources/PreferenceEditor/mmakefile
-
-# /Feelin/Sources/PreferenceGroup/
-/Feelin/Sources/PreferenceGroup/mmakefile
-
-# /Feelin/Sources/Preview/
-/Feelin/Sources/Preview/mmakefile
-
-# /Feelin/Sources/PreviewColor/
-/Feelin/Sources/PreviewColor/mmakefile
-
-# /Feelin/Sources/PreviewFrame/
-/Feelin/Sources/PreviewFrame/mmakefile
-
-# /Feelin/Sources/PreviewImage/
-/Feelin/Sources/PreviewImage/mmakefile
-
-# /Feelin/Sources/PreviewScheme/
-/Feelin/Sources/PreviewScheme/mmakefile
-
-# /Feelin/Sources/Prop/
-/Feelin/Sources/Prop/mmakefile
-
-# /Feelin/Sources/Radio/
-/Feelin/Sources/Radio/mmakefile
-
-# /Feelin/Sources/Render/
-/Feelin/Sources/Render/mmakefile
-
-# /Feelin/Sources/Scale/
-/Feelin/Sources/Scale/mmakefile
-
-# /Feelin/Sources/Scrollbar/
-/Feelin/Sources/Scrollbar/mmakefile
-
-# /Feelin/Sources/Slider/
-/Feelin/Sources/Slider/mmakefile
-
-# /Feelin/Sources/String/
-/Feelin/Sources/String/mmakefile
-
-# /Feelin/Sources/Text/
-/Feelin/Sources/Text/mmakefile
-
-# /Feelin/Sources/TextDisplay/
-/Feelin/Sources/TextDisplay/mmakefile
-
-# /Feelin/Sources/Thread/
-/Feelin/Sources/Thread/mmakefile
-
-# /Feelin/Sources/Window/
-/Feelin/Sources/Window/mmakefile
-
-# /Feelin/Sources/XMLApplication/
-/Feelin/Sources/XMLApplication/mmakefile
-
-# /Feelin/Sources/XMLDocument/
-/Feelin/Sources/XMLDocument/mmakefile
-
-# /Feelin/Sources/XMLObject/
-/Feelin/Sources/XMLObject/mmakefile
-
-# /Feelin/Sources/feelin/
-/Feelin/Sources/feelin/mmakefile
-
-# /Feelin/Tools/
-/Feelin/Tools/mmakefile
-
 # /Games/Bomber/
 /Games/Bomber/mmakefile
 
@@ -527,6 +254,7 @@
 
 # /Networking/Apps/OWB/WebView/
 /Networking/Apps/OWB/WebView/mmakefile
+/Networking/Apps/OWB/WebView/OWB-r1097-aros.diff
 
 # /Networking/Apps/OWB/catalogs/
 /Networking/Apps/OWB/catalogs/mmakefile
@@ -1660,42 +1388,6 @@
 
 # /gfx/libs/wazp3d/demo/
 /gfx/libs/wazp3d/demo/mmakefile
-
-# /gfx/mesa/demos/
-/gfx/mesa/demos/mmakefile
-
-# /gfx/mesa/demos/book/
-/gfx/mesa/demos/book/mmakefile
-
-# /gfx/mesa/demos/demos/
-/gfx/mesa/demos/demos/mmakefile
-
-# /gfx/mesa/demos/images/
-/gfx/mesa/demos/images/mmakefile
-
-# /gfx/mesa/demos/samples/
-/gfx/mesa/demos/samples/mmakefile
-
-# /gfx/mesa/demos/src-aux/
-/gfx/mesa/demos/src-aux/mmakefile
-
-# /gfx/mesa/demos/src-glut/
-/gfx/mesa/demos/src-glut/mmakefile
-
-# /gfx/mesa/demos/src-tk/
-/gfx/mesa/demos/src-tk/mmakefile
-
-# /gfx/mesa/lib/
-/gfx/mesa/lib/mmakefile
-
-# /gfx/mesa/lib/si-glu/
-/gfx/mesa/lib/si-glu/mmakefile
-
-# /gfx/mesa/lib/src-glu/
-/gfx/mesa/lib/src-glu/mmakefile
-
-# /gfx/mesa/misc/
-/gfx/mesa/misc/mmakefile
 
 # /gfx/mysticube/
 /gfx/mysticube/mmakefile
