Add support for version control of Gallium3D interface (not the gallium.hidd versioning)
git-svn-id: https://svn.aros.org/svn/aros/trunk@32770 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/gfx/libs/mesa/src/gallium/hidds/hidd.softpipe/softpipe.conf
+++ b/contrib/gfx/libs/mesa/src/gallium/hidds/hidd.softpipe/softpipe.conf
@@ -17,6 +17,7 @@ classdatatype   struct HIDDGalliumSoftpipeDriverData
 ##begin methodlist
 .interface Root
 New
+Get
 .interface Hidd_GalliumBaseDriver
 CreatePipeScreen
 QueryDepthStencil
