Fix wrong #ifdefs in softpipe.h and nouveau.h gallium.hidd     - bump interface to version 2.0     - add method for destroying screen into gallium.hidd interface.     - add new attributes to display surface method nouveau.hidd:     - implement acquiring visible screen surface     - implement displaying render buffer surface
git-svn-id: https://svn.aros.org/svn/aros/trunk@32823 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/gfx/libs/mesa/src/gallium/hidds/hidd.softpipe/softpipe.conf
+++ b/contrib/gfx/libs/mesa/src/gallium/hidds/hidd.softpipe/softpipe.conf
@@ -1,5 +1,5 @@
 ##begin config
-version         1.0
+version         2.0
 residentpri     90
 libbasetype     struct IntHIDDSoftpipeBase
 basename        GALLIUMSOFTPIPEDRIVER
@@ -22,4 +22,5 @@ Get
 CreatePipeScreen
 QueryDepthStencil
 DisplaySurface
+DestroyPipeScreen
 ##end methodlist
