--- a/contrib/gfx/libs/mesa/src/gallium/hidds/hidd.gallium/gallium.conf
+++ b/contrib/gfx/libs/mesa/src/gallium/hidds/hidd.gallium/gallium.conf
@@ -1,5 +1,5 @@
 ##begin config
-version         1.0
+version         2.0
 residentpri     90
 libbasetype     struct IntHIDDGalliumBase
 basename        GALLIUMBASEDRIVER
@@ -22,6 +22,7 @@ Get
 CreatePipeScreen
 QueryDepthStencil
 DisplaySurface
+DestroyPipeScreen
 ##end methodlist
 
 ##begin class
