gallium.hidd:     - remove basedriverclass - this is now only an interface     - add clean up of dependencies     - clean up loading and selection of driver implementation     - bump version softpipe.hidd:      - change parent class to root hidd      - bump version nouveau.hidd:      - change parent class to root hidd      - bump version
git-svn-id: https://svn.aros.org/svn/aros/trunk@32827 fb15a70f-31f2-0310-bbcc-cdcc74a49acc

--- a/contrib/gfx/libs/mesa/src/gallium/hidds/hidd.nouveau/nouveau.conf
+++ b/contrib/gfx/libs/mesa/src/gallium/hidds/hidd.nouveau/nouveau.conf
@@ -1,10 +1,10 @@
 ##begin config
-version         2.0
+version         3.0
 residentpri     90
 libbasetype     struct IntHIDDNouveauBase
 basename        GALLIUMNOUVEAUDRIVER
 classid         CLID_Hidd_GalliumNouveauDriver
-superclass      CLID_Hidd_GalliumBaseDriver
+superclass      CLID_Hidd
 classptr_field  sd.galliumNouveauDriverClass
 classdatatype   struct HIDDGalliumNouveauDriverData
 ##end config
