--- a/contrib/gfx/libs/mesa/src/gallium/hidds/hidd.softpipe/softpipe.conf
+++ b/contrib/gfx/libs/mesa/src/gallium/hidds/hidd.softpipe/softpipe.conf
@@ -1,10 +1,10 @@
 ##begin config
-version         2.0
+version         3.0
 residentpri     90
 libbasetype     struct IntHIDDSoftpipeBase
 basename        GALLIUMSOFTPIPEDRIVER
 classid         CLID_Hidd_GalliumSoftpipeDriver
-superclass      CLID_Hidd_GalliumBaseDriver
+superclass      CLID_Hidd
 classptr_field  sd.galliumSoftpipeDriverClass
 classdatatype   struct HIDDGalliumSoftpipeDriverData
 ##end config
